syntax = "proto3";

package health;

option go_package = "github.com/example/grpc-service/proto/health";

// Health service following the gRPC health checking protocol
service Health {
  // Check health status
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Stream health status updates
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

// Health check request
message HealthCheckRequest {
  string service = 1;
}

// Health check response
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  
  ServingStatus status = 1;
  map<string, CheckResult> checks = 2;
}

// Individual check result
message CheckResult {
  bool healthy = 1;
  string message = 2;
  int64 latency_ms = 3;
}